flex-wrap date selector, and various other fixes to start, x-ray, data model, wrong text and missing i18n

--- a/frontend/src/metabase/css/admin.css
+++ b/frontend/src/metabase/css/admin.css
@@ -290,8 +290,6 @@
 .AdminTable {
   border-collapse: collapse;
   border-spacing: 0;
-
-  white-space: nowrap;
   text-align: left;
 }
 
